# higher-or-lower

./: CMakeLists.txt
.cache/clangd/index/: Accessor.cxx.29033B3F056E47B0.idx  Accessor.h.62556A01ED5BA898.idx  App.cpp.7F586ADD87926124.idx  AutoComplete.cxx.C9AC00B4C6F00D3C.idx  AutoComplete.h.7972BA8415488B9B.idx  CallTip.cxx.6E724544325E7CE3.idx  CallTip.h.0F75F45D4281095A.idx  CaseConvert.cxx.E20FC84E09DA917E.idx  CaseConvert.h.76D04863B836078C.idx  CaseFolder.cxx.32855211954917DB.idx  CaseFolder.h.55A77E6541A340D1.idx  CatalogueModules.h.BEB28E1CCFC2E7F4.idx  CellBuffer.cxx.5C640A2BC09E9794.idx  CellBuffer.h.705C8D9F4C1F6881.idx  CharClassify.cxx.FC54CC161DD6E15D.idx  CharClassify.h.026967EB48610C1D.idx  CharacterCategory.cxx.78DF820179EC85FC.idx  CharacterCategory.h.4BE9AE1E9432B0A0.idx  CharacterSet.cxx.BCBB0D8AAD8A2776.idx  CharacterSet.h.FFC005698324E3A0.idx  Compat.h.C03F278971E6458F.idx  ContractionState.cxx.2403056E0438279A.idx  ContractionState.h.F2994BA4F7593297.idx  DBCS.cxx.4737F80DED1768FA.idx  DBCS.h.82FF07B66FDAA7EA.idx  Decoration.cxx.3557B00014E31DC3.idx  Decoration.h.D71620E00644CE0F.idx  DefaultLexer.cxx.7C674D2D2316ACF0.idx  DefaultLexer.h.28A9739C53CE8ECC.idx  Document.cxx.2D0F9E0DF0A84A62.idx  Document.h.61A2FE556C76F570.idx  EditModel.cxx.E34C00CFA7C97328.idx  EditModel.h.5D7DAF50E3F30A5E.idx  EditView.cxx.08A4A83A5152626E.idx  EditView.h.FB75A607EBCB1ED1.idx  Editor.cxx.9B61BDC410D25C93.idx  Editor.h.531ECD3FFC5D5FCF.idx  ElapsedPeriod.h.B4864AA42177CD15.idx  ILexer.h.1909AB8752E76088.idx  (+1680 more)
src/: App.cpp  App.hpp  MainFrame.cpp  MainFrame.hpp
(+384 files in other folders)
